java api 更新